# firestone

./: .gitignore  .travis.yml  README.md  firestone.cabal  stack.yaml
app/: Main.hs
src/Firestone/: Card.hs  Character.hs  Common.hs  Database.hs  Database.hs-boot  Deck.hs  Error.hs  Event.hs  Game.hs  Game.hs-boot  Game.hs-boot.bak  GameBuilder.hs  Gameplay.hs  Hero.hs  IdGenerator.hs  Minion.hs  Player.hs  Script.hs  Trigger.hs  Trigger.hs-boot  Types.hs  Utils.hs
test/: GameSpec.hs
test/Minion/: ImpGangBossSpec.hs
