name:                firestone
version:             0.1.0.0
synopsis:            A card game experiment in Haskell game design
description:         Please see README.md
homepage:            http://github.com/jinxit/firestone#readme
license:             MIT
license-file:        LICENSE
author:              Lucas Åström
maintainer:          lucasas@kth.se
copyright:           Copyright: (c) 2015 Lucas Åström
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Firestone.Character
                     , Firestone.Database
                     , Firestone.GameBuilder
                     , Firestone.Game
                     , Firestone.Hero
                     , Firestone.IdGenerator
                     , Firestone.Player
                     , Firestone.Trigger
                     , Firestone.Types
                     , Firestone.Utils
                     , Firestone.Script
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , lens
                     , MissingH
                     , free
  default-language:    Haskell2010

executable firestone-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , firestone
                     , mtl
  default-language:    Haskell2010

test-suite firestone-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GameSpec
  build-depends:       base
                     , firestone
                     , lens
                     , mtl
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jinxit/firestone
